--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,23 +1,10 @@
 TRANSLATE
 
-Events/Beach(On Progress by NinjaQuince)
-Events/FishShop(On Progress by NinjaQuince)
-Events/HayleyHouse(On Progress by NinjaQuince)
-Events/IslandHut(On Progress by NinjaQuince)
-Events/IslandNorth(On Progress by NinjaQuince)
-Events/IslandSouth(On Progress by NinjaQuince)
-Events/IslandWest(On Progress by NinjaQuince)
-Events/Mountain(On Progress by NinjaQuince)
-Events/Saloon(On Progress by NinjaQuince)
-Events/ScienceHouse(On Progress by NinjaQuince)
-Events/SeedShop(On Progress by NinjaQuince)
-Events/Trailer(On Progress by NinjaQuince)
-
 Strings/Characters
 Strings/Locations
 Strings/StringsFromMaps
 Strings/UI
-Strings/SpecialOrderStrings
+Strings/SpecialOrderStrings (On Progress by NinjaQuince)
 Strings/StringsFromCSFiles:
     Event.cs.1257 ~ Event.cs.1260
     Event.cs.1606 ~ Event.cs.1635
@@ -60,13 +47,22 @@ Willy fishing rod event:
 	'Selama amis, pasti laris'???????????
 
 Wizard community center event:
-    Pemburu kenyataan nan misterius?
+    Pemburu kenyataan nan misterius? (fixed on commit #72a5d80 >    "Pencari kebenaran ilmu magis")
 
 Pam:
     Apakah Anda berteman dengan Guys -> Periksa ulang dan ganti Anda menjadi kau
 
 Typo:
-	kaugunakan -> kau gunakan
+	kaugunakan -> kau gunakan 
+	(dilansir dari https://puebi.readthedocs.io/en/latest/kata/kata-ganti/
+	Kata ganti ku- dan kau- ditulis serangkai dengan kata yang mengikutinya, sedangkan -ku, -mu, dan -nya ditulis serangkai dengan kata yang mendahuluinya.
+	
+	Misalnya:
+	-Rumah itu telah kujual.
+	-Majalah ini boleh kaubaca.
+	-Bukuku, bukumu, dan bukunya tersimpan di perpustakaan.
+	-Rumahnya sedang diperbaiki.)
+	
 	seoorang -> seorang
 	aglikultural -> agrikultural
 	clint: aku -><- Aku
