Add translation entries to "Strings/Characters"
also add very minor correction

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,9 +1,7 @@
 TRANSLATE
 
-Strings/Characters (On Progress by NinjaQuince)
 Strings/Locations
-Strings/StringsFromMaps (On Progress by NinjaQuince)
-Strings/UI
+Strings/UI (On Progress by NinjaQuince)
 Strings/StringsFromCSFiles:
     Event.cs.1257 ~ Event.cs.1260
     Event.cs.1606 ~ Event.cs.1635
